networking/cluster-ip.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cip-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: clusterip-app
  template:
    metadata:
      labels:
        app: clusterip-app
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: clusterip-service
spec:
  type: ClusterIP
  selector:
    app: clusterip-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
spec:
  containers:
    - name: test-container
      image: busybox
      command: ["sh", "-c", "wget -qO- http://clusterip-service:8080"]
